<resources>
    <string name="app_name">SK_android</string>
    <string name="pvTitle">認証コードを入力</string>
    <string name="loadingHint">ロード中</string>
    <string name="loginTitle">ログイン</string>
    <string name="LoginRequired">上記会員規約と個人情報の取り扱いに同意し会員登録</string>
    <string name="liIntroduction">ログイン</string>
    <string name="liPhonePrefix">+86</string>
    <string name="liPhoneHint">携帯番号を入力してください</string>
    <string name="liPassWordHint">パスワードを入力してください</string>
    <string name="liRegist">登録</string>
    <string name="liForgotPassword">パスワードを忘れました?</string>
    <string name="liPasswordError">パスワードが正しくありません。</string>
    <string name="liNoAccount">存在しないアカウントです。</string>
    <string name="liPasswordFormality">正しい携帯番号を入力してください。</string>
    <string name="liButton">ログイン</string>
    <string name="liAccountEmpty">アカウントは空にできません</string>
    <string name="liPasswordEmpty">パスワードを入力してください</string>
    <string name="liUnqualifiedPassword">パスワードの形式が正しくありません</string>
    <string name="liCornerstoneError">まず会員規約と個人情報に同意してください</string>
    <string name="liNetworkError">エラーが発生しましたので、もう一回試してください。</string>
    <string name="liNetError">ネットワークエラー</string>
    <string name="trpTitle">パスワードを再設定します</string>
    <string name="trpIntroduction">パスワードを再設定します</string>
    <string name="trpPonePrefix">+86</string>
    <string name="trpPhoneHint">携帯番号を入力してください</string>
    <string name="trpPasswordHint">新しいパスワードを入力してください</string>
    <string name="trpButton">次へ</string>
    <string name="trpPhoneError">正しい携帯番号を入力してください</string>
    <string name="trpPasswordError">パスワードは8-16桁で数字とアルファベットの組合せ</string>
    <string name="allPhoneErrorFormat">正しい電話番号を入力してください</string>
    <string name="pvIntroduction">認証コードを入力</string>
    <string name="pvCodeDate">もう一回送ります。(</string>
    <string name="pvRsend">もう一回送ります</string>
    <string name="btnCont">パスワードを再設定</string>
    <string name="pvButton">次へ</string>
    <string name="verificationCode">認証コードを入力してください</string>
    <string name="codeErrorMessage">正しい認証コードを入力してください。</string>
    <string name="pvCodeEmpty">認証コードは空にできません</string>
    <string name="pcCodeError">例外が発生しました。もう一度お試しください</string>
    <string name="mtTitle">SK直聘会員規約</string>
    <string name="mtIntroduction">SK直聘会員規約及びプライバシーポリシー</string>
    <string name="mtText">尊敬するユーザー: あなたはSKの直任の招聘の会员になって、SKのまっすぐに提供するサービスを使用する前に、あなたは本ユーザーの合意とプライバシーの政策を真面目に読んでください、更に私达の提供するサービスとあなたの享受する権利の义务をよく理解します。BOSSの直任任サービスをご利用いただくことになりました。すなわち、本ファイルの全条項をご確認いただいたことを意味します。 第一部分のユーザプロトコル 本ユーザー协议(略称「契约」)は、成都アニメ谷デジタル科学技术有限公司(以下「SK直任」という)が、SK直任任が提供するSK直任任ソフトウェアに基づき定めた権利义务规定である。SK直任任ソフトウェアは1つの厳粛で清浄な招聘のサービスのソフトウェアで、あなたはSK直任任を登录して使用する前に、以下の条项を真面目に読んでください: 一、登录アイテムの受け入れ クリックすればあなたは、登録ページやデキストリン「読むし、ユーザーの合意やプライバシー政策」を受け入れる関連内容の後、すなわちはお読み直迎え入れskと合意に同意しsk直迎え入れの会員になる本を受けると加入者合意の全体登録条項やsk直迎え</string>
    <string name="mrTitle">会員登録</string>
    <string name="loginRequired">上記会員規約と個人情報の取り扱いに同意し会員登録</string>
    <string name="mrIntroduction">携帯番号で登録</string>
    <string name="mrHint">携帯番号を入力してください</string>
    <string name="phonePrefix">+86</string>
    <string name="ask">アカウントはありますか?</string>
    <string name="login">ここに押してログイン</string>
    <string name="accountMessage">このアカウントは存在していますので、改めて入力してく ださい!</string>
    <string name="mrButton">次へ</string>
    <string name="mrCornerstoneError">会員規約に同意して登録。</string>
    <string name="mrTelephoneEmpty">電話番号を入力してください</string>
    <string name="mrTelephoneFormat">正しい携帯番号を入力してください。</string>
    <string name="mrNetworkError">エラーが発生しましたので、もう一回試してください</string>
    <string name="spTitle">パスワード設定</string>
    <string name="spIntroduction">パスワード設定</string>
    <string name="spEmail">パスワードを入力してください。</string>
    <string name="spPassword">パスワードを再入力してください。</string>
    <string name="spButton">完成</string>
    <string name="spRemind">パスワードが設定された後、携帯番号+パスワードの形で ログインできます。</string>
    <string name="spPasswordError">パスワードは8～16文字のうちアルファベットと数字を記入してください。</string>
    <string name="spPasswordInconsistent">パスワードが一致しません。</string>
    <string name="IiTitle">情報の1/4を完成する</string>
    <string name="piTitle">基本情報</string>
    <string name="IiIntroduction">1/4基本情報</string>
    <string name="IiName">お名前</string>
    <string name="IiNameHint">名前</string>
    <string name="IiGender">性別</string>
    <string name="IiMan">男</string>
    <string name="IiWoMan">女</string>
    <string name="IiPhone">携帯番号</string>
    <string name="IiPhoneHint">携帯番号を入力してください</string>
    <string name="IiMail">メールアドレス</string>
    <string name="IiMailHint">メールアドレスを入力してください</string>
    <string name="IiBrahma">Line番号</string>
    <string name="IiBrahmaHint">Line番号を入力してください</string>
    <string name="IiBorn">生年月日</string>
    <string name="IiBornHint">年月日を選んでください</string>
    <string name="IiInitialInauguration">初就職年月</string>
    <string name="IiInitialInaugurationHint">2019-01</string>
    <string name="IiEmploymentStatu">求人ステータス</string>
    <string name="IiEmploymentStatuHint">離職-いつでも入社可能</string>
    <string name="IiWorkSkills">能力・スキル</string>
    <string name="IiWorkSkillsHint">能力・スキルを入力してください</string>
    <string name="IiPersonalSkills">特技</string>
    <string name="IiPersonalSkillsHint">特技を入力してください</string>
    <string name="IiButtonText">次へ</string>
    <string name="IiImage">写真の選択</string>
    <string name="IiSurname">苗字</string>
    <string name="IiStatusOne">離職中</string>
    <string name="IiStatusTwo">一ヶ月以内には退職予定</string>
    <string name="IiStatusThree">良い条件が見つかり次第</string>
    <string name="IiStatusFour">その他</string>
    <string name="IiResumeName">の履歴書</string>
    <string name="jobSearchStatus">求職ステータス</string>
    <string name="jobStatusOne">离职-常に职に就く</string>
    <string name="jobStatusTwo">仕事は-月中に</string>
    <string name="jobStatusThree">在職・機会を考える</string>
    <string name="jobStatusFour">在职-しばらくは考えない</string>
    <string name="jobStatuVerify">キャンセル</string>
    <string name="PfourTitle">情報の4/4を完成する</string>
    <string name="PtwoTitle">情報の2/4を完成する</string>
    <string name="PthreeTitle">情報の3/4を完成する</string>
    <string name="PtwoIntroduction">2/4学歴</string>
    <string name="school">学校名</string>
    <string name="schoolHint">学校名を入力してください</string>
    <string name="education">学歴</string>
    <string name="educationHint">修士</string>
    <string name="majorField">専攻分野</string>
    <string name="majorFieldHint">専攻を入力してください</string>
    <string name="admission">入学時間</string>
    <string name="admissionHint">2015-09</string>
    <string name="graduation">卒業時間</string>
    <string name="graduationHint">2018-06</string>
    <string name="PtwoButton">完成</string>
    <string name="educationOne">中卒</string>
    <string name="educationTwo">高卒</string>
    <string name="educationThree">専門卒・短大卒</string>
    <string name="educationFour">大卒</string>
    <string name="educationFive">修士</string>
    <string name="educationSix">博士</string>
    <string name="resumeSuffix">-の履歴書</string>
    <string name="PthreeIntroduction">3/4最近の勤務経験(新卒は直接に次へ)</string>
    <string name="company">会社名</string>
    <string name="companyHint">会社名を入力してください</string>
    <string name="companySelector">会社名を非表示</string>
    <string name="position">役職</string>
    <string name="positionHint">役職を入力してください</string>
    <string name="workTime">在籍期間</string>
    <string name="startTime">2015-09</string>
    <string name="endTime">2019-09</string>
    <string name="work">業務内容</string>
    <string name="workHint">簡単な記述可能,在個人履歴で編集可能!</string>
    <string name="jumpOver">スキップ</string>
    <string name="PfourIntroduction">4/4就職ご希望</string>
    <string name="expectedPosition">希望業種</string>
    <string name="expectedPositionHint">PHPエンジニア</string>
    <string name="remuneration">希望給料</string>
    <string name="remunerationHint">60万-80万</string>
    <string name="desiredIndustry">仕事タイプ</string>
    <string name="desiredIndustryHint">パートタイム</string>
    <string name="employmentForm">仕事の採用方法</string>
    <string name="employmentFormHint">企業が直任する</string>
    <string name="headHunting">ヘッドハンティング推薦</string>
    <string name="workAddress">希望の勤務地</string>
    <string name="workAddressHint">東京都 | 大阪府</string>
    <string name="advantage">個人アピール</string>
    <string name="advantageHint">簡単な記述可能,在個人履歴で編集可能!</string>
    <string name="hourly">時給</string>
    <string name="daySalary">日給</string>
    <string name="monthSalary">月給</string>
    <string name="yearSalary">年収</string>
    <string name="startHourly">10K</string>
    <string name="threeThousand">30K</string>
    <string name="fourThousand">40k</string>
    <string name="fiveThousand">50k</string>
    <string name="sixThousand">60k</string>
    <string name="endHourly">20K</string>
    <string name="fullTime">フルタイム</string>
    <string name="partTime">パートタイム</string>
    <string name="overseas">海外採用を受ける</string>
    <string name="overseasTrue">は</string>
    <string name="overseasFalse">いいえ</string>
    <string name="personFullTime">正社員</string>
    <string name="personContract">契約社員</string>
    <string name="personThree">派遣社員</string>
    <string name="personShort">有期社員</string>
    <string name="personOther">その他</string>
    <string name="personName">記入されていない</string>
    <string name="contactNumber">514</string>
    <string name="contact">連絡あり</string>
    <string name="interViewNumber">4</string>
    <string name="interView">面接ステータス</string>
    <string name="submittedNumber">102</string>
    <string name="submitted">書類提出</string>
    <string name="favoriteNumber">53</string>
    <string name="favorite">お気に入り</string>
    <string name="webResume">履歴書</string>
    <string name="fileResume">自作の履歴書</string>
    <string name="hopeIndustry">就職希望</string>
    <string name="customsCompany">フォローしている会社</string>
    <string name="privacySettings">プライバシー設定</string>
    <string name="reisukeSukesuke">ヘルプとフィードバック</string>
    <string name="settings">設定</string>
    <string name="myBaseInformation">基本情報</string>
    <string name="faTitle">面接詳細</string>
    <string name="faceCompany">任天堂株式会社</string>
    <string name="reserved">予約済み</string>
    <string name="facePosition">役職</string>
    <string name="faceNavi">ナビ</string>
    <string name="faceChat">チャット</string>
    <string name="faceTime">2019-03-13 10:30</string>
    <string name="faceTask">phpエンジニア，30万-50万</string>
    <string name="faceAddress">東京都中央区XXX</string>
    <string name="cancelInterView">今日18:00前取り消す可能</string>
    <string name="cancelReason">取り消す原因</string>
    <string name="cancelHint">適切な仕事を見つけたので、新しい機会はし ばらく必要ありません。</string>
    <string name="faceRemarks">備考</string>
    <string name="cancelButton">戻る</string>
    <string name="requestButton">確定</string>
    <string name="rlTitle">自作の履歴書</string>
    <string name="rlButton">自作の履歴書をアップロード</string>
    <string name="rlResumeName">の履歴書</string>
    <string name="rlRename">リネーム</string>
    <string name="rlSendEmail">メール送信</string>
    <string name="rlDelete">削除</string>
    <string name="rlOperatCancel">キャンセル</string>
    <string name="rlRenameTitle">リネーム</string>
    <string name="rlRenameHint">新しいファイルネームを入力してください</string>
    <string name="rlRenameCancel">キャンセル</string>
    <string name="rlRenameRequird">確定</string>
    <string name="rlDeleteHint">添付した履歴書を 削除するのは確定しましたか?</string>
    <string name="rlDeleteCancel">キャンセル</string>
    <string name="rlDeleteRequird">確定</string>
    <string name="srTitle">メール送信</string>
    <string name="srSend">送信</string>
    <string name="srHint">メールアドレスを入力してください</string>
    <string name="srResumeName">視覚デザイン履歴書3</string>
    <string name="srResumeSize">1.3MB</string>
    <string name="srResumeDate">2019.03.01上传</string>
    <string name="jmTitle">就職希望管理</string>
    <string name="jmStateTitle">求職ステータス</string>
    <string name="flIntroduction">ベテランの視覚デザイナー</string>
    <string name="flNotFind">募集終了</string>
    <string name="flAddress">東京</string>
    <string name="flNumber">1～3</string>
    <string name="flFirst">大卒</string>
    <string name="flPosition">ジャさん·社長</string>
    <string name="flClose">この役職は既に募集終了しました</string>
    <string name="jlPreferredType">希望役職</string>
</resources>