<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:background="@drawable/interview_popup"
                  android:layout_height="215dp">

        <TextView android:layout_width="match_parent"
                  android:layout_marginTop="20dp"
                  android:gravity="center_horizontal"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black20"
                  android:textSize="15sp"
                  android:text="@string/rlRenameTitle"/>
        
        <EditText android:layout_width="match_parent"
                  android:layout_height="70dp"
                  android:layout_marginTop="20dp"
                  android:hint="@string/rlRenameHint"
                  android:gravity="top"
                  android:textColorHint="@color/gray5c"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:background="@color/grayF6"
                  android:paddingTop="10dp"
                  android:textSize="12sp"
                  android:maxHeight="70dp"/>
        
        <LinearLayout android:layout_width="match_parent"
                      android:layout_marginTop="20dp"
                      android:layout_height="44dp">
            <Button android:layout_width="wrap_content"
                    android:layout_marginRight="5dp"
                    android:id="@+id/cancel_button"
                    android:text="@string/rlRenameCancel"
                    android:textSize="14sp"
                    android:textColor="@color/whiteFF"
                    android:background="@color/grayCc"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>

            <Button android:layout_width="wrap_content"
                    android:paddingLeft="5dp"
                    android:id="@+id/request_button"
                    android:text="@string/rlRenameRequird"
                    android:textSize="15sp"
                    android:textColor="@color/whiteFF"
                    android:background="@color/yellowFFB706"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>