<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:background="@drawable/interview_popup"
                  android:layout_height="129dp">

        <TextView android:layout_width="match_parent"
                  android:gravity="center"
                  android:text="@string/rlDeleteHint"
                  android:textSize="16sp"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:textColor="@color/black20"
                  android:layout_height="85dp"/>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/gray97"
              ></View>
        <LinearLayout android:layout_width="match_parent"
                      android:paddingLeft="10dp"
                      android:paddingRight="10dp"
                      android:layout_height="44dp">
            <Button android:layout_width="wrap_content"
                    android:id="@+id/cancel_button"
                    android:text="@string/rlDeleteCancel"
                    android:textSize="14sp"
                    android:textColor="@color/blue007AFF"
                    android:background="@color/whiteFF"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>

            <View android:layout_width="1dp"
                  android:layout_height="match_parent"
                  android:background="@color/gray97"
            ></View>

            <Button android:layout_width="wrap_content"
                    android:id="@+id/request_button"
                    android:text="@string/rlDeleteRequird"
                    android:textSize="14sp"
                    android:textColor="@color/blue007AFF"
                    android:background="@color/whiteFF"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>